# lab1_cpp_2025

./: CMakeLists.txt
include/: function.hpp
src/: function.cpp  main.cpp
tests/: test.cpp
